# backup-ops

./: .gitignore  Cargo.toml  detect-dups.sh  filter-paths.sh  gather-paths.sh  hash-paths.sh  pipeline-music.sh  pipeline-old-cds.sh  pipeline-pictures.sh  run.sh  test-pipeline-old-cds.sh
copy-files/: Cargo.toml
copy-files/src/: main.rs
core/: Cargo.toml
core/src/: common.rs  copy_files.rs  detect_dups.rs  filter_paths.rs  gather_paths.rs  hash_paths.rs  internals.rs  lib.rs  process.rs  single_hash.rs  unique_paths.rs
detect-dups/: Cargo.toml
detect-dups/src/: main.rs
filter-paths/: Cargo.toml
filter-paths/src/: main.rs
gather-paths/: Cargo.toml
gather-paths/src/: main.rs
hash-paths/: Cargo.toml
hash-paths/src/: main.rs
single-hash/: Cargo.toml
single-hash/src/: main.rs
unique-paths/: Cargo.toml
unique-paths/src/: main.rs
