[package]
name = "core"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sha-1 = "0.8.1"
csv = "1.1.1"
serde_json = "1.0.44"
size_format = "1.0.2"
num-format = "0.4.0"
anyhow = "1.0.26"
regex = "1.3.1"